# Little-Money

./: .gitignore  README.md
littleBackend/: main.py  pyproject.toml
littleBackend/src/controller/: contaController.py  tarefaController.py  tarefaItemController.py  usuarioController.py
littleBackend/src/database/: dbConnectionHandler.py
littleBackend/src/models/: contaModel.py  contaSchema.py  tarefaItemModel.py  tarefaItemSchema.py  tarefaModel.py  tarefaSchema.py  usuarioModel.py  usuarioSchema.py
littleBackend/src/models/mix/: tarefaItemTarefaSchema.py
littleBackend/src/repository/: contaRepository.py  tarefaItemRepository.py  tarefaRepository.py  usuarioRepository.py
littleBackend/src/repository/SQL/: tarefaItem.py
littleBackend/src/util/: util.py
littleapp/: .gitignore  README.md  pubspec.yaml
littleapp/.dart_tool/: package_config.json  package_config_subset
littleapp/.dart_tool/extension_discovery/: vs_code.json
littleapp/.dart_tool/flutter_build/0093d270d343496957bac6e3522c6d94/: .filecache  debug_android_application.stamp  flutter_assets.d  gen_dart_plugin_registrant.stamp  kernel_snapshot.d  kernel_snapshot.stamp  native_assets.d  outputs.json  (+1 more)
littleapp/android/app/: build.gradle
littleapp/lib/: main.dart
littleapp/lib/modelo/: contaUsuario.dart  tarefaItem.dart  usuario.dart
littleapp/lib/repository/: contaUsuario.repository.dart  tarefa.repository.dart  usuario.repository.dart
littleapp/lib/util/: design.dart  enums.dart  httpClient.dart  util.dart
littleapp/test/: widget_test.dart
scripts/: Migration.sql  usuarioSQL.sql
(+7 files in other folders)
