[tool.poetry]
name = "littlebackend"
version = "0.1.0"
description = "Backend que suprirá as demandas do backend"
authors = ["Israel Alves <israel.usp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
SQLAlchemy = "^2.0.31"
python-dotenv = "^1.0.1"
fastapi = "^0.111.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
