[tool.poetry]
name = "littlebackend"
version = "0.1.0"
description = "Backend que suprirá as demandas do backend"
authors = ["Israel Alves <israel.usp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
SQLAlchemy = "^2.0.29"
python-dotenv = "^1.0.1"
fastapi = "^0.111.1"
pymysql = "^1.1.1"
cryptography = "^43.0.0"
sqlalchemy-serializer = "^1.4.22"


[tool.poetry.group.dev.dependencies]
faker = "^27.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
